# csgo-gc-inventory-editor

./: .gitignore  AGENTS.md  Cargo.toml  LICENSE  README.md  README_zh-CN.md  build.rs
.github/workflows/: build-test.yml  release.yml
assets/languages/: en-US.ftl  zh-Hans.ftl
csgo_gc/editor/: settings.json
csgo_gc/editor/cache/en/: meta.json
csgo_gc/editor/languages/: en-US.ftl  zh-Hans.ftl
src/: app.rs  config.rs  main.rs  settings.rs
src/core/: game_dir.rs  mod.rs
src/inventory/: item_attribute.rs  items_game.rs  items_game_loader.rs  language_file.rs  loader.rs  mod.rs  models.rs  parser.rs  vdf.rs
src/online_data/: api.rs  mod.rs  models.rs  provider.rs
src/rcon/: client.rs  commands.rs  mod.rs
src/ui/: helpers.rs  inventory_page.rs  item_detail.rs  item_grid.rs  mod.rs  rcon_page.rs  select_window.rs  settings_page.rs  sidebar.rs  toolbar.rs
