[package]
name = "csgo-inventory-editor"
version = "0.1.0"
description = "CSGO-GC Inventory Editor - Cross-platform tool for editing CSGO inventory files"
authors = ["Your Name <email@example.com>"]
edition = "2024"
repository = "https://github.com/yourusername/csgo-inventory-editor"

[dependencies]
eframe = { version = "0.28", default-features = false, features = ["wgpu"] }
egui = "0.28"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
ron = "0.9"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
panic = "abort"

[features]
default = []
