[package]
name = "csgo-inventory-editor"
version = "0.1.0"
description = "CSGO-GC Inventory Editor - Cross-platform tool for editing CSGO inventory files"
authors = ["Your Name <email@example.com>"]
edition = "2024"
repository = "https://github.com/yourusername/csgo-inventory-editor"

[dependencies]
eframe = { version = "0.33", default-features = false, features = ["glow", "persistence", "default_fonts"] }
egui = "0.33"
egui_extras = "0.33"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
ron = "0.9"
regex = "1.10"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
panic = "abort"

[features]
default = []
