[package]
name = "csgo-inventory-editor"
version = "0.1.0"
description = "CSGO-GC Inventory Editor - Cross-platform tool for editing CSGO inventory files"
authors = ["Your Name <email@example.com>"]
edition = "2024"
repository = "https://github.com/yourusername/csgo-inventory-editor"

[dependencies]
eframe = { version = "0.34", default-features = false, features = ["wgpu", "persistence", "default_fonts"] }
egui = "0.34"
egui_extras = "0.34"
egui-i18n = { version = "0.2", features = ["fluent"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.13", features = ["json", "blocking"] }
chrono = "0.4"

[target.'cfg(windows)'.dependencies]
wgpu = { version = "29", features = ["dx12"] }

[target.'cfg(target_os = "macos")'.dependencies]
wgpu = { version = "29", features = ["metal"] }

[target.'cfg(target_os = "linux")'.dependencies]
wgpu = { version = "29", features = ["vulkan"] }

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
panic = "abort"

[features]
default = []
